uprava zaplaceni dema (nebo jak to ted nazyvame)

--- a/View/login.phtml
+++ b/View/login.phtml
@@ -21,7 +21,7 @@
             <form  method="post" >
                 <div class=" row mt-3">
                     <label for="jmeno" class="form-label">Zadej jméno: </label>
-                    <input type="text" name="jmeno" id="jmeno" required class="form-control" placeholder="Jmeno">
+                    <input type="text" name="jmeno" id="jmeno" required class="form-control" placeholder="Jméno">
                 </div>
         
                 <div class=" row mt-3">
@@ -38,8 +38,10 @@
                         <?php
                     }
                     ?>
+            <div class="border mt-4"></div>
+                  
                 <div class="row mt-4 mb-2" text-center >
-                    <input type="submit" value="Prihlasit se" class="btn btn-primary ">
+                    <input type="submit" value="Prihlasit se" class="btn btn-primary btn-prihlasit">
                 </div>
             </form>
            
