--- a/View/formular.phtml
+++ b/View/formular.phtml
@@ -1,16 +1,16 @@
 
 <div class="row pt-5 pb-5 text-center text-white bg-primary">
     <div class="col-12" >
-        <h1 class="text-large" >Formulář Zaplaceni</h1>
+        <h1 class="text-large" >Formulář Zaplacení</h1>
     </div>
 </div>
 
-<div class="container">
-    <div class="row mt-3 "> 
+<div class="container" >
+    <div class="row mt-3 pb-5"> 
         <div class="col-xl-1">
             
         </div>
-        <div class="col-xl-10 border rounded-5 p-3">
+        <div class="col-xl-10 border rounded-5 p-3 shadow">
             
             <div class="row text-center my-3">
         
@@ -18,6 +18,8 @@
             </div>
             <div class="border"></div>
             <form method="POST" action="formular">
+                <input type="text" name="oddeleni" id="oddeleni" required value="platebni_brana" hidden>
+
 
                 <div class="row mt-3">
                     <div class="form-group col-md-6">
@@ -69,15 +71,11 @@
                         </div>
                 </div>
                 <!-- <div class="border mt-3 mt-3"></div> -->
+                <div class="border mt-4"></div>
                 <div class="row mt-4 mb-2">
-                    <div class="col-sm-4">
-                        <button href="uvod" class="btn btn-primary">Zpět</button>
-                    </div>
-                    <div class="col-sm-4">
-                
-                    </div>
-                    <div class="col-sm-4 text-end  ">
-                        <button type="submit" class="btn btn-primary ">Pokračovat</button>
+                    <div class="col-sm-12 d-flex justify-content-between  ">
+                        <button href="uvod" class="btn btn-primary btn-formular">Zpět</button>
+                        <button type="submit" class="btn btn-primary btn-formular">Pokračovat</button>
                     </div>
                 </div>   
             </form>
