--- a/View/htmlBase.phtml
+++ b/View/htmlBase.phtml
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
 
+    <!-- připojení fontu -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap" rel="stylesheet">
+
 
 </head>
 <body>
@@ -19,7 +24,7 @@
         window.addEventListener('load', function () {
             let url = window.location.href;
         url = url.split("/");
-        console.log(url);
+        // console.log(url);
 
         const element = document.getElementById(url.pop());
         if (element != null){
