--- a/View/sprava.phtml
+++ b/View/sprava.phtml
@@ -14,7 +14,7 @@ date_default_timezone_set('Europe/Prague');
 <h1 class="text-center pt-3 pb-3">Informace o Transakcích</h1>
   
 <div class="container-xxl  table-responsive-xl">
-    <table class="table fixed-table-body table-striped table-sm table-hover text-center ">
+    <table class="table fixed-table-body table-striped table-sm table-hover text-center rounded-3 overflow-hidden shadow">
       <thead class="table-dark">
         <tr>
           <th>Číslo transakce</th>
