--- a/View/zaplatit.phtml
+++ b/View/zaplatit.phtml
@@ -4,15 +4,25 @@
         </div>
 </div>
 <div class="container-md bg-light p-2">
-    <p>po zmáčknutí budete přesměrování na platební bránu</p>
+    <div class="row py-3 text-center ">
+        <div class="col-12">
+            <h2>Po zmáčknutí budete přesměrování na platební bránu</h2>
+        </div>
+    </div>
 
 
     <?php if(isset($state)) { ?>
         <p><?= $this->data["stavObjednavky"] ?></p>
     <?php }?>
-    <form action="<?=$this->data["gopay_url"]?>" method="post" class="text-center ">
-    <button name="pay" type="submit" class="btn btn-primary btn-lg btn-zaplatit">Zaplatit</button>
-    </form>
+
+    
+    <div class="row text-center " >
+        <div class="col-12">
+            <form action="<?=$this->data["gopay_url"]?>" method="post" class="text-center ">
+            <button name="pay" type="submit" class="btn btn-primary btn-lg btn-zaplatit" >Zaplatit</button>
+            </form>
+        </div>
+    </div>
 
 
 </div>
