--- a/View/mainPage.phtml
+++ b/View/mainPage.phtml
@@ -1,3 +1,4 @@
+<!-- Pohled pro úvodní stránku -->
 <div class="row pt-5 pb-5 text-center text-white bg-primary">
     <div class="col-12" >
         <h1 class="text-large" >Integrace Platební Brány GoPay</h1>
