--- a/View/pay.phtml
+++ b/View/pay.phtml
@@ -1,3 +1,4 @@
+<!-- pohled pro PaymentDemo -->
 <div class="row pt-5 pb-5 text-center text-white bg-primary">
         <div class="col-12" >
             <h1 class="text-large" >Zaplatit Objednávku</h1>
@@ -10,7 +11,7 @@
         </div>
     </div>
 
-
+    <!-- Výpis stavu objednávky -->
     <?php if(isset($state)) { ?>
         <p><?= $this->data["stavObjednavky"] ?></p>
     <?php }?>
