--- a/View/administration.phtml
+++ b/View/administration.phtml
@@ -1,6 +1,7 @@
-
+<!-- Pohled pro administraci -->
 
 <?php
+// Nastavení časové zóny
 date_default_timezone_set('Europe/Prague');
 ?>
 
@@ -12,7 +13,7 @@ date_default_timezone_set('Europe/Prague');
 </div>
 
 <h1 class="text-center pt-3 pb-3">Informace o Transakcích</h1>
-  
+<!-- Záhlaví tabulky -->
 <div class="container-xxl  table-responsive-xl">
     <table class="table fixed-table-body table-striped table-sm table-hover text-center rounded-3 overflow-hidden shadow">
       <thead class="table-dark">
@@ -37,6 +38,7 @@ date_default_timezone_set('Europe/Prague');
       </thead>
   
       <tbody>
+        <!-- Výpis z databáze -->
         <?php foreach ($transakce as $radek){ ?>
         <tr>
           <td><?= $radek['id_transakce']; ?></td>
