--- a/View/htmlBase.phtml
+++ b/View/htmlBase.phtml
@@ -1,3 +1,5 @@
+<!-- Základní HTML struktura -->
+
 <!DOCTYPE html>
 <html lang="cs">
 <head>
@@ -18,35 +20,36 @@
 
 </head>
 <body>
+    <!-- Připojení Bootstrapu  -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script>
 
+        // Nastavení zvýrazněného prvku v navigaci
         window.addEventListener('load', function () {
-            let url = window.location.href;
+        let url = window.location.href;
         url = url.split("/");
-        // console.log(url);
 
         const element = document.getElementById(url.pop());
+
         if (element != null){
             element.setAttribute("class"," nav-item nav-link active")
-            // console.log(element);
         }
         })
         
     </script>
 
-
+<!-- Navigace -->
 <div class="container-fluid ">
         <div class="row">
                 <nav class="navbar navbar-expand navbar-light navbar- bg-light text-uppercase fw-bold ">
                     <div class="nav navbar-nav text-nav">
-                        <a id="uvod" class="nav-item nav-link" href="uvod" >Úvod</a>
+                        <a id="mainpage" class="nav-item nav-link" href="mainpage" >Úvod</a>
                         <?php 
                         if(($_SESSION["prihlasen"] == true)){
-                            ?>  <a  id="sprava" class="nav-item nav-link" href="sprava">Správa</a> 
+                            ?>  <a  id="administration" class="nav-item nav-link" href="administration">Správa</a> 
                         <?php } ?>
                         <div class="border"></div>
-                            <a id="zaplatit" class="nav-item nav-link" href="formular">Zaplatit Demo</a>
+                            <a id="paymentdemo" class="nav-item nav-link" href="paymentdemo">Zaplatit Demo</a>
                     </div>
                     <div class="nav navbar-nav ms-auto text-nav">
             
@@ -56,7 +59,7 @@
                         ?>  <a class="nav-item nav-link " href="login">Přihlásit</a> <?php
                     }
                     else {
-                        ?>  <a class="nav-item nav-link navbar-end" href="odhlasit">Odhlásit</a> <?php
+                        ?>  <a class="nav-item nav-link navbar-end" href="logout">Odhlásit</a> <?php
                     }
             
                     ?>
@@ -64,20 +67,10 @@
                 </nav>
         </div>
 
-        <!-- <div class="row pt-5 pb-5 text-center text-white bg-primary">
-            <div class="col-12" >
-
-                <h1 class="text-large" >Integrace Platební Brány GoPay</h1>
-            </div>
-            <div class="col-12">
-
-                <h2>Aleš Recman,Vojtěch Mrkva</h2>
-            </div>
-        </div> -->
+      
         
     </div>
-    
-    <!-- <div class="container-md bg-light p-2"> -->
+    <!-- Výpis zpráv -->
     <div class="container-fluid">
     
         <div 
@@ -93,7 +86,8 @@
 
     
 <?php
-        $this->controller->printView();
+    // výpis aktuálního pohledu
+    $this->controller->printView();
 
         
    ?>
