--- a/View/payed.phtml
+++ b/View/payed.phtml
@@ -1,4 +1,4 @@
-
+<!-- Pohled pro Payed -->
 <div class="row pt-5 pb-5 text-center text-white bg-primary">
         <div class="col-12" >
             <h1 class="text-large" >Platba byla uspěšná</h1>
