--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-
+/* import fontu */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Rubik:wght@300;400;500;600&display=swap');
 * {
     font-family: 'Rubik', sans-serif;
@@ -6,8 +6,8 @@
 }
 
 
-/* odebrání šipek u input typu number */
 
+/* Odebrání šipek u input typu number */
 /* Chrome, Safari, Edge, Opera  */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
