Lehká úprava vzhledu administrace

--- a/View/administration.phtml
+++ b/View/administration.phtml
@@ -14,8 +14,8 @@ date_default_timezone_set('Europe/Prague');
 
 <h1 class="text-center pt-3 pb-3">Informace o Transakcích</h1>
 <!-- Záhlaví tabulky -->
-<div class="container-xxl  table-responsive-xl">
-    <table class="table fixed-table-body table-striped table-sm table-hover text-center rounded-3 overflow-hidden shadow">
+<div class="d-flex  table-responsive-xl mx-5">
+    <table class="table fixed-table-body table-striped table-sm table-hover text-center rounded-3 overflow-hidden shadow mx-5">
       <thead class="table-dark">
         <tr>
           <th>Číslo transakce</th>
