--- a/View/administration.phtml
+++ b/View/administration.phtml
@@ -55,9 +55,11 @@ date_default_timezone_set('Europe/Prague');
           <td><?= $radek['castka'] . "Kč"; ?></td>
           <td><?= $radek['stav']; ?></td>
           <td><?=date("j.n.Y H:i:s", strtotime($radek['cas_vytvoreni'])); ?></td>
-          <td><?php if($radek["cas_zaplaceni"] != NULL) echo(date("j.n.Y H:i:s", strtotime($radek['cas_zaplaceni']))); ?></td>
-          <td><a href="<?=$this->view?>?request=<?= $radek["id_transakce"] ?>" class="link-underline">request</a></td>
-        
+          <td><?php if($radek["cas_zaplaceni"] != NULL) 
+            echo(date("j.n.Y H:i:s", strtotime($radek['cas_zaplaceni']))); ?>
+          </td>
+          <td><a href="<?=$this->view?>?request=<?= $radek["id_transakce"] ?>"
+            class="link-underline">request</a></td>       
         </tr>
         <?php } ?>
       </tbody>
