--- a/View/editdepartment.phtml
+++ b/View/editdepartment.phtml
@@ -22,6 +22,10 @@
                     <label for="url">URL</label>
                     <input type="text" class="form-control" id="url" name="url" value="<?= $oddeleni["url"] ?>">
                 </div>
+                <div class="form-group">
+                    <label for="notification_url">Notifikační URL</label>
+                    <textarea class="form-control" id="notification_url" name="notification_url" rows="3"><?= $oddeleni["notification_url"] ?></textarea>
+                </div>
                 <input type="submit" class="btn btn-primary" name="submit" value="Upravit">
             </form>
         </div>
