--- a/View/oddeleni.phtml
+++ b/View/oddeleni.phtml
@@ -27,6 +27,10 @@
                     <label for="url">URL</label>
                     <input type="text" class="form-control" id="url" name="url">
                 </div>
+                <div class="form-group">
+                    <label for="notification_url">Notifikační URL</label>
+                    <textarea class="form-control" id="notification_url" name="notification_url" rows="3"></textarea>
+                </div>
                 <input type="submit" class="btn btn-primary" name="submit" value="Přidat">
             </form>
         </div>
@@ -42,6 +46,7 @@
         <tr>
           <th>oddělení</th>
           <th>URL</th>
+          <th>Notifikační URL</th>
           <th>Upravy</th>
         </tr>
       </thead>
@@ -52,6 +57,7 @@
         <tr>
             <td><?= $radek['nazev']; ?></td>
             <td><?= $radek['url']; ?></td>
+            <td><?= $radek['notification_url']; ?></td>
             <td>
                 <a href="editdepartment?id=<?= $radek['nazev'] ?>" class="btn btn-primary">Upravit</a>
                 <a href="deletedepartment?id=<?= $radek['nazev'] ?>" class="btn btn-danger">Smazat</a>
