Upravene nofikační url z textarea na input type text

--- a/View/oddeleni.phtml
+++ b/View/oddeleni.phtml
@@ -29,7 +29,7 @@
                 </div>
                 <div class="form-group">
                     <label for="notification_url">Notifikační URL</label>
-                    <textarea class="form-control" id="notification_url" name="notification_url" rows="3"></textarea>
+                    <input type="text" class="form-control" id="notification_url" name="notification_url">
                 </div>
                 <input type="submit" class="btn btn-primary" name="submit" value="Přidat">
             </form>
