--- a/View/editdepartment.phtml
+++ b/View/editdepartment.phtml
@@ -24,7 +24,7 @@
                 </div>
                 <div class="form-group">
                     <label for="notification_url">Notifikační URL</label>
-                    <textarea class="form-control" id="notification_url" name="notification_url" rows="3"><?= $oddeleni["notification_url"] ?></textarea>
+                    <input type="text" class="form-control" id="notification_url" name="notification_url" value="<?= $oddeleni["notification_url"] ?>">
                 </div>
                 <input type="submit" class="btn btn-primary" name="submit" value="Upravit">
             </form>
