--- a/View/editdepartment.phtml
+++ b/View/editdepartment.phtml
@@ -26,6 +26,10 @@
                     <label for="notification_url">Notifikační URL</label>
                     <input type="text" class="form-control" id="notification_url" name="notification_url" value="<?= $oddeleni["notification_url"] ?>">
                 </div>
+                <div class="form-group">
+                    <label for="api_token">API token</label>
+                    <input type="text" class="form-control" id="api_token" name="api_token" value="<?= $oddeleni["api_token"] ?>">
+                </div>
                 <input type="submit" class="btn btn-primary" name="submit" value="Upravit">
             </form>
         </div>
