--- a/View/oddeleni.phtml
+++ b/View/oddeleni.phtml
@@ -31,7 +31,7 @@
                     <label for="notification_url">Notifikační URL</label>
                     <input type="text" class="form-control" id="notification_url" name="notification_url">
                 </div>
-                <div class="form-group>
+                <div class="form-group">
                     <label for="api_token">API token</label>
                     <input type="text" class="form-control" id="api_token" name="api_token">
                 </div>
@@ -63,7 +63,7 @@
             <td><?= $radek['nazev']; ?></td>
             <td><?= $radek['url']; ?></td>
             <td><?= $radek['notification_url']; ?></td>
-            <td><?= $radek['api_token']; ?></td>
+            <td><a href="<?=$this->view?>?api_token=<?= $radek["nazev"] ?>">API token</a></td>
             <td>
                 <a href="editdepartment?id=<?= $radek['nazev'] ?>" class="btn btn-primary">Upravit</a>
                 <a href="deletedepartment?id=<?= $radek['nazev'] ?>" class="btn btn-danger">Smazat</a>
