Uprava ad oddeleni v navigaci odkazuje spravne

--- a/View/htmlBase.phtml
+++ b/View/htmlBase.phtml
@@ -47,7 +47,7 @@
                         <?php 
                         if(($_SESSION["prihlasen"] == true)){
                             ?>  <a  id="administration" class="nav-item nav-link" href="administration">Správa</a> 
-                            <a  id="departments" class="nav-item nav-link" href="oddeleni">Oddělení</a>
+                            <a  id="departments" class="nav-item nav-link" href="department">Oddělení</a>
                         <?php } ?>
                         <div class="border"></div>
                             <a id="paymentdemo" class="nav-item nav-link" href="paymentdemo">Zaplatit Demo</a>
