--- a/View/emptyBase.phtml
+++ b/View/emptyBase.phtml
@@ -20,6 +20,13 @@
 
 </head>
 <body>
-    
+
+<?php
+    // výpis aktuálního pohledu
+    $this->controller->printView();
+
+        
+   ?>
+
 </body>
 </html>
