--- a/View/waiting.phtml
+++ b/View/waiting.phtml
@@ -1,1 +1,17 @@
+<style>
+    .kolecko {
+    width: 50px; 
+    height: 50px;
+    -webkit-animation: tocit 1s infinite linear;
+    animation: tocit 1s infinite linear;
+    border-radius: 50%;
+    border-bottom: 3px solid black;
+}
+@-webkit-keyframes tocit {
+    to {-webkit-transform: rotate(360deg)}
+}
+@keyframes tocit {
+    to {transform: rotate(360deg)}
+}
+</style>
 <div class="kolecko"></div>
