--- a/View/department.phtml
+++ b/View/department.phtml
@@ -63,7 +63,7 @@
             <td><?= $radek['nazev']; ?></td>
             <td><?= $radek['url']; ?></td>
             <td><?= $radek['notification_url']; ?></td>
-            <td><a href="<?=$this->view?>?api_token=<?= $radek["nazev"] ?>">API token</a></td>
+            <td><a href="showtoken?department=<?= $radek["nazev"] ?>">API token</a></td>
             <td>
                 <a href="editdepartment?id=<?= $radek['nazev'] ?>" class="btn btn-primary">Upravit</a>
                 <a href="deletedepartment?id=<?= $radek['nazev'] ?>" class="btn btn-danger">Smazat</a>
